<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constlayHeader"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/headerphoto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#40000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cherry_swash_bold"
                android:text="@string/txtMeal_plan"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/vectorbackarrowwhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtMainDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/lora"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:text="@string/txtMonday" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtViewShoppingList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/lora"
                    android:text="@string/txtPlease_choose_your_meals"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBreak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtBreakfast"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtBreakfastSelected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/no_breakfast_has_been_selected_yet"/>

                <TextView
                    android:id="@+id/txtLunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtLunchSelected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/no_lunch_has_been_selected_yet"/>

                <TextView
                    android:id="@+id/txtDinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtDinnerSelected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/no_dinner_has_been_selected_yet"/>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>