<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".Settings">

    <!-- Header with background image and title -->
    <FrameLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88000000"
            android:scaleType="centerCrop"
            android:src="@drawable/headerphoto" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cherry_swash_bold"
            android:paddingBottom="30dp"
            android:text="@string/settingsHeeading"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:src="@drawable/vectorbackarrowwhite" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">
    <!-- LinearLayout for the text views -->
    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Change Language TextView -->
        <TextView
            android:id="@+id/txtchangelang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtChange_language"
            android:paddingTop="15dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />


        <!-- Dark Mode Toggle -->
        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/DarkMode"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Change Password TextView -->
        <TextView
            android:id="@+id/txtchangepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtChange_password"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <!-- Logout TextView -->
        <TextView
            android:id="@+id/txtlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLogout"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <!-- Delete Account TextView -->
        <TextView
            android:id="@+id/txtdelaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDelete_account"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/turn_off_notifications"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
