<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".MealPlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constlayHeader"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/headerphoto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#40000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cherry_swash_bold"
                android:text="@string/txtMeal_plan"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtMon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMonday"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtTues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTuesday"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/txtWed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtWednesday"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtThur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ttxThursday"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtFri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtFriday"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtSat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSaturday"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtSun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSunday"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/lora"
                    android:textStyle="bold"
                    android:textSize="24sp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ivShoppingBag"
                            android:layout_width="103dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="53dp"
                            app:srcCompat="@drawable/vector_shoppingbag" />

                        <TextView
                            android:id="@+id/txtViewShoppingList"
                            android:layout_width="311dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lora"
                            android:paddingLeft="8dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="25dp"
                            android:paddingRight="5dp"
                            android:text="@string/txtClick_to_view_your_shopping_list"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="19sp"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

    </LinearLayout>


</FrameLayout>