<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteAccount"
    android:background="?android:attr/colorBackground">

    <!-- Header with background image and title -->
    <FrameLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88000000"
            android:scaleType="centerCrop"
            android:src="@drawable/headerphoto" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cherry_swash_bold"
            android:text="@string/delete_accountHeading"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:src="@drawable/vectorbackarrowwhite" />

    </FrameLayout>

    <!-- LinearLayout for the content below the header -->
    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Information Text -->
        <TextView
            android:id="@+id/txtdelinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/txtPlease_enter_current_password"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp" />

        <!-- EditText for Password Input -->
        <EditText
            android:id="@+id/edtconfirmpass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/txt_background"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="?android:textColor" />

        <!-- Warning Text -->
        <TextView
            android:id="@+id/txtwarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWarning"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/btnDelete"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/txtDelete"
            android:textColor="@android:color/white"
            android:layout_marginBottom="40dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
